--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "hrr45-cowlist",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "start": "nodemon ."
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,12 @@
     "babel-loader": "^8.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "jquery": "^3.5.0",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.3",
+    "react": "^16.13.1"
   }
 }
